[tool.poetry]
name = "bigquery-orm"
version = "0.0.1"
description = "BigQuery ORM"
authors = ["Fernando Celmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bigquery_orm"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-bigquery = "^3.11.4"


[tool.poetry.group.dev.dependencies]
tox = "^4.10.0"
pytest = "^7.4.0"
flake8 = "^6.1.0"
build = "^0.10.0"
coverage = "^7.3.0"


[tool.poetry.group.test.dependencies]
pydantic = "^2.2.1"
sqlalchemy = "^2.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
